--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "svg-logo-maker",
+  "name": "package",
   "version": "1.0.0",
-  "description": "Week-10 Challenge",
+  "description": "svg logo maker",
   "main": "index.js",
   "directories": {
     "example": "examples",
     "lib": "lib"
   },
+  "dependencies": {
+    "inquirer": "^9.2.10",
+    "jest": "^29.6.3"
+  },
+  "devDependencies": {
+    "esm": "^3.2.25"
+  },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node esm index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rmessett15/SVG-Logo-Maker.git"
+    "url": "git+https://github.com/2015johngtz/SVG-Logo-Maker.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "svgkey"
+  ],
+  "author": "jonathan gutierrez",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rmessett15/SVG-Logo-Maker/issues"
+    "url": "https://github.com/2015johngtz/SVG-Logo-Maker/issues"
   },
-  "homepage": "https://github.com/rmessett15/SVG-Logo-Maker#readme",
-  "dependencies": {
-    "inquirer": "^8.2.4"
-  },
-  "devDependencies": {
-    "jest": "^29.5.0"
-  }
+  "homepage": "https://github.com/2015johngtz/SVG-Logo-Maker#readme"
 }
