--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package",
+  "name": "SVG-Logo-Maker",
   "version": "1.0.0",
   "description": "svg logo maker",
   "main": "index.js",
@@ -8,25 +8,23 @@
     "lib": "lib"
   },
   "dependencies": {
-    "inquirer": "^9.2.10",
+    "esm": "^3.2.25",
+    "inquirer": "^8.2.4",
     "jest": "^29.6.3"
   },
   "devDependencies": {
-    "esm": "^3.2.25"
+    "jest": "^29.5.0"
   },
   "scripts": {
-    "test": "jest",
-    "start": "node esm index.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/2015johngtz/SVG-Logo-Maker.git"
   },
-  "keywords": [
-    "svgkey"
-  ],
-  "author": "jonathan gutierrez",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/2015johngtz/SVG-Logo-Maker/issues"
   },
